manifests/namespaces.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: mlflow
  labels:
    opendatahub.io/dashboard: "true"
    name: mlflow
---
apiVersion: v1
kind: Namespace
metadata:
  name: minio
  labels:
    opendatahub.io/dashboard: "true"
    name: minio
