manifests/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: mlflow
  namespace: mlflow
spec:
  host: ""
  path: /
  port:
    targetPort: http
  to:
    kind: Service
    name: mlflow
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
